--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^7.1.0",
+    "mongose": "^0.0.2-security",
     "nodemon": "^2.0.22"
   }
 }
